jEdit 5.2 version history
       (changes since jEdit 5.1.0)
:encoding=UTF-8:

{{{ Version 5.2pre2

Thanks to Björn "Vampire" Kautler, Makarius, Dale Anson, Alan Ezust,
Matt Galligan, Eric Le Lay, Makarius, and Matthieu Casanova for contributing to
this release.

{{{ Bug Fixes

- Make the TextArea a JPanel instead of a JComponent, so that it draws its
  background and set the background color to the Gutter background color. This
  prevents the parent component to shine through, which would e. g. show blue
  edges with the BufferTabs plugin installed and active.
  (Björn "Vampire" Kautler)

- Fix a bug preventing from removing an unloaded plugin
  (#3877 - Matthieu Casanova)

- The native splashscreen is removed as it was not possible to disable it
  (#3876 - Matthieu Casanova)

- Bugfix in EditPane.java related to file status checks.
  (Patch #534 - Matt Galligan)

- Fix for bug #3389 in BufferSwitcher.java where look and feel was locked to
  Metal. (Dale Anson)

- Fix for bug #3893 where PluginResURLConnection.openStream returning null for
  non existing resources made jEdit hang on Java 8, Mac OS 10.10. (Eric Le Lay)

- Fix for Bugs #3895, #3897: Invalid HelpIndex URLs on windows.
  (Alan Ezust,  Eric Le Lay)

}}}
{{{ Miscellaneous
- MiscUtilities.openInDesktop() works with URIs on Windows now. (Alan Ezust)

}}}
{{{ API Changes

- DockableWindowContainer interface is now public (Patch #528 - Makarius)

- PluginResURLConnection.openStream() is garanteed to return non-null stream;
  PluginResURLConnection.connect() and PluginResURLConnection.openStream()
  throw an IOException when the resource is not found. (Eric Le Lay)

}}}
{{{ Editing


}}}

}}}

{{{ Version 5.2pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Dale Anson, Thomas Meyer,
Patrick Eibl, László Schmidt, Zsombor Franczia, Bence Pintér, Makarius,
Benjamin Zengin, Yihua Zhang, Marc Häfner, EdorFaus, Jordan Miner,
Thiemo Kellner, Tim Blackler, Alan Ezust, and Eric Le Lay for contributing to