@@ -10,6 +10,13 @@ this release.
 
 {{{ Bug Fixes
 
+- EnhancedDialog does not throw NullPointerExceptions anymore when checking
+  whether a pressed key is the buffer close shortcut. (Björn "Vampire" Kautler)
+
+- When using extra vertical line spacing and a selection foreground color, the
+  selected text was painted twice, once with the extra spacing, once without.
+  Now the selected text is drawn correctly. (Björn "Vampire" Kautler)
+
 - Make the TextArea a JPanel instead of a JComponent, so that it draws its
   background and set the background color to the Gutter background color. This
   prevents the parent component to shine through, which would e. g. show blue
